[package]
name = "mcnotify"
version = "0.2.1"
authors = ["Shusui MOYATANI <syusui.s@gmail.com>"]

[dependencies]
byteorder = "1.0.0"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
xdg-basedir = "1.0.0"
toml = "0.4.2"
getopts = "0.2"
strfmt = "0.1.5"
chrono = "0.4.0"
egg-mode = { git = "https://github.com/QuietMisdreavus/twitter-rs.git", rev = "8491554" }
log = "0.3"
env_logger = "0.6"
tokio = "0.1"
