[package]
name = "mcnotify"
version = "0.3.0"
authors = ["Shusui MOYATANI <syusui.s@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.4.3"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
xdg-basedir = "1.0.0"
toml = "0.5.9"
getopts = "0.2"
strfmt = "0.1.6"
chrono = "0.4.19"
egg-mode = "0.16.0"
log = "0.4"
env_logger = "0.9"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
